[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/lan_multiplayer/scripts/lobby_controller.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.419608, 0.419608, 0.419608, 1 )

[sub_resource type="Theme" id=2]
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Panel/styles/panel = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.25098, 0.243137, 0.282353, 1 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "SEARCHING FOR GAMES..." ]
}

[sub_resource type="Animation" id=9]
resource_name = "load"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "SEARCHING FOR GAMES...", "SEARCHING FOR GAMES..", "SEARCHING FOR GAMES.", "SEARCHING FOR GAMES..." ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "full"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.0823529, 0, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "invalid"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}

[node name="lobby_controller" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
theme = SubResource( 2 )

[node name="main" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Panel" type="Panel" parent="main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -120.0
margin_right = 220.0
margin_bottom = 65.0
theme = SubResource( 2 )
custom_styles/panel = SubResource( 7 )

[node name="searching_text" type="Label" parent="main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.5
margin_top = -30.0
margin_right = 86.5
margin_bottom = -16.0
text = "SEARCHING FOR GAMES..."

[node name="AnimationPlayer" type="AnimationPlayer" parent="main/searching_text"]
autoplay = "load"
anims/RESET = SubResource( 8 )
anims/load = SubResource( 9 )

[node name="host_button" type="Button" parent="main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = 80.0
margin_right = 220.0
margin_bottom = 120.0
text = "HOST"

[node name="ScrollContainer" type="ScrollContainer" parent="main"]
margin_left = -220.0
margin_top = -120.0
margin_right = 220.0
margin_bottom = 65.0

[node name="list" type="VBoxContainer" parent="main/ScrollContainer"]

[node name="room" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Panel" type="Panel" parent="room"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -120.0
margin_right = 220.0
margin_bottom = 65.0
theme = SubResource( 2 )
custom_styles/panel = SubResource( 7 )

[node name="room" type="VBoxContainer" parent="room"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -120.0
margin_right = 220.0
margin_bottom = 70.0
focus_mode = 2
mouse_filter = 0
custom_constants/separation = -1
__meta__ = {
"_editor_description_": ""
}

[node name="host" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="start_button" type="Button" parent="host"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = 80.0
margin_right = -90.0
margin_bottom = 120.0
text = "START"
__meta__ = {
"_editor_description_": ""
}

[node name="settings_button" type="Button" parent="host"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = 80.0
margin_right = 70.0
margin_bottom = 120.0
text = "SETTINGS"

[node name="back_button" type="Button" parent="host"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 90.0
margin_top = 80.0
margin_right = 220.0
margin_bottom = 120.0
text = "BACK"

[node name="join" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="back_button" type="Button" parent="join"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = 80.0
margin_right = 220.0
margin_bottom = 120.0
text = "BACK"

[node name="settings" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="game_name" type="LineEdit" parent="settings"]
margin_left = -220.0
margin_top = -120.0
margin_right = 220.0
margin_bottom = -80.0
text = "My Game"
align = 1
placeholder_text = "Insert game name"
caret_blink = true

[node name="max_players" type="SpinBox" parent="settings"]
margin_left = -220.0
margin_top = -65.0
margin_right = -10.0
margin_bottom = -25.0
min_value = 2.0
max_value = 6.0
value = 6.0
align = 1
prefix = "Max Players:"

[node name="time" type="SpinBox" parent="settings"]
margin_left = 10.0
margin_top = -65.0
margin_right = 220.0
margin_bottom = -25.0
min_value = 1.0
max_value = 15.0
value = 15.0
align = 1
prefix = "Time:"
suffix = "minutes"
__meta__ = {
"_editor_description_": ""
}

[node name="back_button" type="Button" parent="settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = 80.0
margin_right = 220.0
margin_bottom = 120.0
text = "BACK"
__meta__ = {
"_editor_description_": ""
}

[node name="error_text" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 125.0
margin_right = 100.0
margin_bottom = 148.0
text = "*Error: ..."
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="error_text"]
anims/RESET = SubResource( 3 )
anims/full = SubResource( 4 )
anims/invalid = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="main/host_button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="host/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="host/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="host/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="join/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="settings/back_button" to="." method="_on_settings_back_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
